--- a/cv01_3d_reconstruction/cv01_3d_reconstruction.ipynb
+++ b/cv01_3d_reconstruction/cv01_3d_reconstruction.ipynb
@@ -18,7 +18,7 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "!pip install opencv-python matplotlib numpy ipython-autotime"
+    "%pip install opencv-python matplotlib numpy ipython-autotime"
    ],
    "metadata": {
     "collapsed": false
