--- a/cv01_3d_reconstruction/cv01_3d_reconstruction.ipynb
+++ b/cv01_3d_reconstruction/cv01_3d_reconstruction.ipynb
@@ -7,7 +7,8 @@
     "\n",
     "Баллы будут проставлены следующим образом:\n",
     "* До 7 баллов за построение панорамы (зависит от её итогового качества)\n",
-    "* 3 балла за самостоятельную имплементацию любого из рассмотренных на лекции или семинаре алгоритма"
+    "* 3 балла за самостоятельную имплементацию любого из рассмотренных на лекции или семинаре алгоритма\n",
+    "* 5 баллов за замену SIFT на любой другой алгоритм (попробуйте DISK), алгоритм должен быть не из OpenCV"
    ],
    "metadata": {
     "collapsed": false
@@ -787,10 +788,109 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "# Fundamental matrix"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
-   "source": [],
+   "source": [
+    "matches = matches_images[ipaths[0], ipaths[1]]\n",
+    "M, matches_mask = homographies[ipaths[0], ipaths[1]]\n",
+    "\n",
+    "pts_0, pts_1 = list(), list()\n",
+    "for match_mask, match in zip(matches_mask, matches):\n",
+    "    # if match_mask:\n",
+    "    pts_1.append(images_info[ipaths[1]]['keypoints'][match.trainIdx].pt)\n",
+    "    pts_0.append(images_info[ipaths[0]]['keypoints'][match.queryIdx].pt)\n",
+    "pts_0 = np.int32(pts_0)\n",
+    "pts_1 = np.int32(pts_1)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "F, mask = cv2.findFundamentalMat(pts_0, pts_1, cv2.FM_LMEDS, ransacReprojThreshold=0.5)\n",
+    "pts_0 = pts_0[mask.ravel()==1]\n",
+    "pts_1 = pts_1[mask.ravel()==1]"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "print(f'Number of inliers: {len(pts_0)}')"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "def draw_lines(img_0_orig, lines, pts_0_orig, pts_1_orig):\n",
+    "    img_0_vis = img_0_orig.copy()\n",
+    "    r, c, _ = img_0_vis.shape\n",
+    "    for r, pt_0, pt_1 in zip(lines, pts_0_orig, pts_1_orig):\n",
+    "        color = np.random.randint(0, 255, 3).tolist()\n",
+    "        x_0, y_0 = map(int, [0, -r[2] / r[1]])\n",
+    "        x_1, y_1 = map(int, [c, -(r[2] + r[0] * c) / r[1]])\n",
+    "        img_0_vis = cv2.line(img_0_vis, (x_0, y_0), (x_1, y_1), color, 1)\n",
+    "        img_0_vis = cv2.circle(img_0_vis, tuple(pt_0), 5, color, -1)\n",
+    "    return img_0_vis"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "lines_0 = cv2.computeCorrespondEpilines(pts_1.reshape(-1,1,2), 2, F)\n",
+    "lines_0 = lines_0.reshape(-1,3)\n",
+    "img_vis_0 = draw_lines(images_info[ipaths[0]]['img'], lines_0, pts_0, pts_1)\n",
+    "\n",
+    "lines_1 = cv2.computeCorrespondEpilines(pts_0.reshape(-1,1,2), 1, F)\n",
+    "lines_1 = lines_1.reshape(-1,3)\n",
+    "img_vis_1 = draw_lines(images_info[ipaths[1]]['img'], lines_1, pts_1, pts_0)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# _ = plt.figure(figsize=(10, 8))\n",
+    "plt.subplot(1, 2, 1)\n",
+    "plt.imshow(img_vis_0)\n",
+    "plt.axis('off')\n",
+    "plt.subplot(1, 2, 2)\n",
+    "plt.imshow(img_vis_1)\n",
+    "plt.axis('off')\n",
+    "plt.show()"
+   ],
    "metadata": {
     "collapsed": false
    }
